--- a/assets/style.css
+++ b/assets/style.css
@@ -6,15 +6,16 @@
 header,
 footer {
     width: 100%;
-    height: 120px;
-    background-color: rgb(25, 25, 64);
+    height: 200px;
+    background-color: rgb(86, 45, 162);
     color: rgb(1, 1, 1);
 }
 
 h1,
 h2 {
     text-align: center;
-    color: rgb(76, 48, 152);
+    color: rgb(132, 118, 171);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
@@ -29,17 +30,21 @@ img {
 ul {
     padding-left: 40px;
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(76, 48, 152);
 }
 
 p {
     text-align: center;
     font-size: 30px;
-    color: rgb(255, 255, 255);
+    color: rgb(132, 118, 171);
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   .card {
     width: 80%;
     margin: 40px auto;
     border: 5px solid rgb(67, 123, 131);
+    background-color: rgb(196, 231, 237);
     box-shadow: 5px 10px #888888;
   }
