--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@ footer {
     height: 200px;
     background-color: rgb(86, 45, 162);
     color: rgb(1, 1, 1);
+    text-align: center;
 }
 
 h1,
@@ -39,6 +40,7 @@ p {
     font-size: 30px;
     color: rgb(132, 118, 171);
     font-family: Arial, Helvetica, sans-serif;
+    
   }
 
   .card {
